force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/Lilly_Non_Contract_Engagement__c.object-meta.xml
<CustomObject>
    <label>Meeting Request</label>
    <nameField>
        <displayFormat>NCE-{00000}</displayFormat>
        <label>Meeting Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>