force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Add_Lilly_Emp_req_for_meeting__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Add_Lilly_Emp_req_for_meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Emp req for meeting</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Non_Contract_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>