force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Call_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Call_Date_and_Time__c</fullName>
    <label>Requested Meeting Time</label>
    <type>DateTime</type>
</CustomField>