force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Congress_or_Meeting__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Congress_or_Meeting__c</fullName>
    <label>Congress or Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
                <isActive>false</isActive>
                <label>Option 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>