force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Discussion_Type_or_Topic__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Discussion_Type_or_Topic__c</fullName>
    <label>Discussion Type or Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>