force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Duration__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>