force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Functional_Owner__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Functional_Owner__c</fullName>
    <label>Functional Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>