force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Meeting_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Meeting_Room_Name__c</fullName>
    <label>Meeting Room Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>