force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Number_of_Requests__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Number_of_Requests__c</fullName>
    <label>Number of Requests</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>