force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Pre_Negotiated_Time__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Pre_Negotiated_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Negotiated Time</label>
    <type>Checkbox</type>
</CustomField>