force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Primary_Lilly_Attendee__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Primary_Lilly_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Attendee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Non_Contract_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>