force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Status__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Approved for Scheduling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>