force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LilIy_Thought_Leader__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Thought_Leader__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Thought Leader</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Requests</relationshipLabel>
    <relationshipName>Non_Contract_Engagements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>