force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_Budget_Approver__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Budget_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meeting_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>