force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_Comment_Constraints_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Comment_Constraints_Considerations__c</fullName>
    <label>Other Comment/Constraints/Considerations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>