force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>