force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_Detailed_Objective__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Detailed_Objective__c</fullName>
    <label>Detailed Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>