force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Lilly_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Lilly_External_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>