force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>