force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_Product_Indication_Other__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Product_Indication_Other__c</fullName>
    <label>Product &amp; Indication / Other</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>