force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_Required_Lilly_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Required_Lilly_Attendees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Lilly Attendees</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Work Day</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Requests (Required Lilly Attendees)</relationshipLabel>
    <relationshipName>Meeting_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>