force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_TL_Country__c.field-meta.xml
<CustomField>
    <fullName>Lilly_TL_Country__c</fullName>
    <label>TL Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__Countries</valueSetName>
    </valueSet>
</CustomField>