force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_TL_Email__c.field-meta.xml
<CustomField>
    <fullName>Lilly_TL_Email__c</fullName>
    <label>TL Email</label>
    <type>Email</type>
</CustomField>