force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_TL_State__c.field-meta.xml
<CustomField>
    <fullName>Lilly_TL_State__c</fullName>
    <label>TL State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lilly_TL_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>OCE__States</valueSetName>
    </valueSet>
</CustomField>