force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/Lilly_Video_Display_Needed__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Video_Display_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video / Display Needed?</label>
    <type>Checkbox</type>
</CustomField>