force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/LillyCongress_or_Meeting__c.field-meta.xml
<CustomField>
    <fullName>LillyCongress_or_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Congress or Meeting</label>
    <referenceTo>OCE__Meeting__c</referenceTo>
    <relationshipName>Non_Contract_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>