force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/OfflineCreatedByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreatedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Created By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meeting_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>