force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/OfflineLastModifiedByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineLastModifiedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Last Modified By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meeting_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>