force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/fields/OfflineUniqueId__c.field-meta.xml
<CustomField>
    <fullName>OfflineUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Offline Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>