force-app/main/default/objects/Lilly_Non_Contract_Engagement__c/listViews/Approved_for_Scheduling.listView-meta.xml
<ListView>
    <fullName>Approved_for_Scheduling</fullName>
    <columns>LillyCongress_or_Meeting__c</columns>
    <columns>LilIy_Thought_Leader__c</columns>
    <columns>LilIy_Number_of_Requests__c</columns>
    <columns>LilIy_Functional_Owner__c</columns>
    <columns>LilIy_Primary_Lilly_Attendee__c</columns>
    <columns>LilIy_Add_Lilly_Emp_req_for_meeting__c</columns>
    <columns>LilIy_Meeting_Room_Name__c</columns>
    <columns>LilIy_Call_Date_and_Time__c</columns>
    <columns>LilIy_Duration__c</columns>
    <columns>LilIy_Pre_Negotiated_Time__c</columns>
    <columns>LilIy_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LilIy_Status__c</field>
        <operation>equals</operation>
        <value>Approved for Scheduling</value>
    </filters>
    <label>Approved for Scheduling</label>
</ListView>